[gd_scene load_steps=2 format=3 uid="uid://u813xsggtl0s"]

[ext_resource type="Script" path="res://game/entities/base_entity/base_entity.gd" id="1_k4olk"]

[node name="BaseEntity" type="CharacterBody2D" groups=["entity"]]
script = ExtResource("1_k4olk")

[node name="SecTimer" type="Timer" parent="."]
autostart = true

[node name="HpRegenCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
lifetime = 2.0
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 64.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
linear_accel_min = -10.0
linear_accel_max = -10.0

[connection signal="timeout" from="SecTimer" to="." method="_on_sec_timer_timeout"]
[connection signal="timeout" from="HpRegenCooldownTimer" to="." method="_on_hp_regen_cooldown_timer_timeout"]
